syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.archi.common.auth";
option java_outer_classname = "VerifyEmailProto";

service VerifyEmailService {
  rpc GetVerifyEmail(GetVerifyEmailRequest) returns(GetVerifyEmailResponse);
}

message GetVerifyEmailRequest {
  string token = 1; // Token có được từ request param.
}

message GetVerifyEmailResponse {
  int64 status = 1; // Thành công thì trả về 200, thất bại thì trả về 400
  string message = 2;
}